--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,15 @@ django-mail-auth = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 # grpcio-tools = "^1.36.1"
+mypy = "^0.991"
+flake8 = "^6.0.0"
+isort = "^5.10.1"
+black = "^22.10.0"
+django-stubs = "^1.13.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.isort]
+profile = "black"
