--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "AGPL-3.0"
 python = "^3.9"
 django = "^4.0.0"
 django-mail-auth = "^3.2.0"
+whitenoise = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 # grpcio-tools = "^1.36.1"
