--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,6 @@ plugins =
 
 [mypy.plugins.django-stubs]
 django_settings_module = "acoustid_web.settings"
+
+[mypy-social_django.models]
+ignore_missing_imports = True
